# EdaChallenge

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
answer/Public/small/: case1_small_q1.txt
checker/: README.md  libgcc_s.so.1
doc/: Q3求解讨论.pptx  eda赛题三.md
instance/: layout.txt  layout1.txt  layout2.txt  quad.txt  rule.txt  rule1.txt
instance/Rule/: public_small_rule1.txt  public_small_rule2.txt  public_small_rule3.txt
instance/Rule/Hidden/: hidden_case_rule_q1.txt  hidden_case_rule_q2.txt  hidden_case_rule_q3.txt
instance/Rule/Public/: public_large_rule1.txt  public_large_rule2.txt  public_large_rule3.txt
solution/: case1_small_layout_q1.txt  res.txt  res1.txt  res2.txt
submit/: metadata.yaml  test.sh  trace  提交格式.md
test/: analysis.py  js脚本.txt  log_downloader.js  run_trace.py  submit.py  test.sh  visual.py
thirty/CGAL/Boolean_set_operations_2/: Gps_on_surface_base_2.h
trace/: CMakeCache.txt  Graph.hpp  Input.hpp  Intersect.hpp  Makefile  ManhattanIntersectDetector.hpp  NaiveThreadPool.h  Output.hpp  PolygonCutting.hpp  QuadTree.hpp  SpaceIndex.hpp  Trace.hpp  cmake_install.cmake  public.h  robin_hood.h  trace.cpp  trace.sln  trace.vcxproj  trace.vcxproj.filters
trace/ManhattanBooleanSetOperation/: CMakeLists.txt  ManhattanBooleanSetOperation.h  README.md
trace/ManhattanBooleanSetOperation/const/: Const.h
trace/ManhattanBooleanSetOperation/model/: MEdge.cpp  MEdge.h  MPolygon.cpp  MPolygon.h  MPolygonSet.h  MVertex.cpp  MVertex.h
trace/ManhattanBooleanSetOperation/solve/: MBSOCore.cpp  MBSOCore.h  Overlay.cpp  Overlay.h
trace/ManhattanBooleanSetOperation/utils/: Bbox.h  Grid.h  HighPerfMemoryPool.h  MPoint_2.h  MSegment_2.h  MemoryPool.h  Point_2.h  Segment.h
trace_answer_checker/: AnswerChecker  README.md  checker
